fixed tooltips and aligned reset button

--- a/portfolio/src/app/skills/skills.component.css
+++ b/portfolio/src/app/skills/skills.component.css
@@ -24,3 +24,10 @@
     margin-right: 15px;
     margin-left: 15px;
 }
+
+.reset-div {
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    padding-top: 15px;
+}
